<resources>
    <string name="app_name">Emi</string>
    <string name="homepage">首页</string>
    <string name="event">活动</string>
    <string name="empty"></string>
    <string name="message">消息</string>
    <string name="personal">个人</string>

    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="settings">设置</string>
    <string name="version">版本信息</string>
    <string name="current_version">当前版本</string>

    <string name="press_again_to_leave">再按一次退出</string>
    <string name="loading">正在加载...</string>
    <string name="load_err_retry">加载失败，点击重试</string>
    <string name="empty_fornow">暂无内容</string>
    <string name="net_error">当前网络不可用，请检查网络设置。</string>

    <string name="prompt_phone">手机号</string>
    <string name="prompt_captcha">验证码</string>
    <string name="send_captcha">/  获取验证码</string>
    <string name="captcha_sending">正在发送验证码...</string>
    <string name="login">登录</string>

    <string name="phonenum">手机号</string>
    <string name="captcha">验证码</string>
    <string name="fetch_captcha">获取验证码</string>
    <string name="captcha_sended">验证码已发送</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="please_wait">请等待 %1$d 秒</string>
    <string name="login_ing">正在登录...</string>
    <string name="edit_compose">编辑资料</string>
    <string name="portrait">头像</string>
    <string name="clip_picture">裁剪图片</string>
    <string name="username">昵称</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birth_date">出生日期</string>
    <string name="height">身高</string>

    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_phone_changed">您修改了手机号，请重新获取验证码</string>
    <string name="phonenum_cant_empty">手机号码不能为空</string>
    <string name="phonenum_invalid">请输入正确的手机号码</string>
    <string name="captcha_cant_empty">请输入正确的验证码</string>
    <string name="register_protocol">登录即代表同意[服装分销]</string>
    <string name="privacy_items">隐私条款</string>

    <string name="setting_opinion">App意见反馈</string>
    <string name="setting_service">售后服务</string>
    <string name="setting_about">关于</string>
    <string name="setting_private">用户隐私协议</string>
    <string name="setting_logout">退出登录</string>
    <string name="personal_info">我的资料</string>

    <string name="feedback">意见反馈</string>
    <string name="feedback_hint">点击输入您的建议或意见</string>
    <string name="feedback_success">发送成功!</string>
    <string name="send">发送</string>

    <string name="pick_place">选择地点</string>

    <string name="edit">编辑</string>
    <string name="done">完成</string>



</resources>
