<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/editor_phone"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="30dp"
        android:background="@color/translucent"
        android:hint="@string/phonenum"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="11"
        android:singleLine="true"
        android:textColor="@color/txt_lvl_2"
        android:textColorHint="@color/txt_lvl_3"
        android:textCursorDrawable="@null"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editor_captcha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/translucent"
            android:hint="@string/captcha"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/txt_lvl_2"
            android:textColorHint="@color/txt_lvl_3"
            android:textCursorDrawable="@null"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/login_fetch_captcha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/send_captcha"
            android:textColor="@color/txt_lvl_3"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/line_color"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_login_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/register_protocol"
            android:textColor="@color/txt_lvl_3"
            android:textSize="@dimen/txt_size_4"/>

        <TextView
            android:id="@+id/login_protocol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/privacy_items"
            android:textColor="@color/txt_lvl_2"
            android:textSize="@dimen/txt_size_3"/>
    </LinearLayout>

</LinearLayout>
